# textualism

./: README.md  specification.md  textualism.cabal
Text/: Textualism.hs
Text/Textualism/: Normalize.hs  Parser.hs  Types.hs  Util.hs
Text/Textualism/Writers/: Html.hs
src/: Textualism.hs
tests/: Reader.hs
