name:                textualism
version:             0.1.0.0
synopsis:            A conversion-focused lightweight markup language.
description:
homepage:            https://github.com/isturdy/textualism
license:             MIT
license-file:        LICENSE
author:              Ian Sturdy
maintainer:          sturdyi12@mail.wlu.edu
category:            Text
build-type:          Simple
cabal-version:       >=1.8
stability:	     experimental

library
  exposed-modules:
    Text.Textualism
    Text.Textualism.Writers.Html
  other-modules:
    Text.Textualism.Normalize
    Text.Textualism.Parser
    Text.Textualism.Types
    Text.Textualism.Util
  GHC-Options:
    -Wall

  build-depends:
    base ==4.*,
    blaze-html >=0.5 && <0.7,
    blaze-markup >=0.5.1 && <0.6,
    containers >=0.5.0.0,
    data-default-class >= 0.0.1,
    lens >= 3.0,
    mtl >=2.1,
    parsec >=3.0,
    text >=0.11.0.0

source-repository head
  type: git
  location: https://github.com/isturdy/textualism